--- a/KanbaraProject/KanbaraProject.csproj
+++ b/KanbaraProject/KanbaraProject.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Logic2.cs" />
     <Compile Include="Logic.cs" />
     <Compile Include="Koma.cs" />
-    <Compile Include="ChangeSquare.cs" />
+    <Compile Include="KomaColor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
